Add image name for pushing to Docker Hub

--- a/app/node/docker-compose.yml
+++ b/app/node/docker-compose.yml
@@ -2,5 +2,6 @@ version: "3.7"
 services:
   interview-test-container:
     build: ./
+    image: stephenchinnadorai/interview-test-container
     ports:
       - "8080:8080"
