--- a/app/node/docker-compose.yml
+++ b/app/node/docker-compose.yml
@@ -3,5 +3,6 @@ services:
   interview-test-container:
     build: ./
     image: stephenchinnadorai/interview-test-container
+    user: "node"
     ports:
       - "8080:8080"
