--- a/app/node/docker-compose.yml
+++ b/app/node/docker-compose.yml
@@ -4,5 +4,6 @@ services:
     build: ./
     image: stephenchinnadorai/interview-test-container
     user: "node"
+    init: true
     ports:
       - "8080:8080"
