--- a/app/node/Dockerfile
+++ b/app/node/Dockerfile
@@ -4,12 +4,14 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm ci
 
 COPY ./ ./
 
 ENV PORT 8080
 
 EXPOSE $PORT
+
+USER node
 
 CMD [ "npm", "start"]
